--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -9,6 +9,11 @@ on init
     mount none /system/lib/hw/camera.msm8953.so /vendor/lib/hw/camera.msm8953.so bind
     mount none /system/lib64/android.frameworks.sensorservice@1.0-v27.so /vendor/lib64/android.frameworks.sensorservice@1.0-v27.so bind
 
+    # Dirac Blobs
+    mount none /system/lib/soundfx/libdirac.so /vendor/lib/soundfx/libdirac.so bind
+    mount none /system/lib/libDiracAPI_SHARED.so /vendor/lib/libDiracAPI_SHARED.so bind
+    mount none /system/etc/diracmobile.config /vendor/etc/diracmobile.config bind
+
     # Power HAL
     mount none /system/lib/hw/power.qcom.so /vendor/lib/hw/power.qcom.so bind
     mount none /system/lib64/hw/power.qcom.so /vendor/lib64/hw/power.qcom.so bind
