--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -25,3 +25,7 @@ on boot
     # DT2W Node
     chown system system /proc/touchpanel/wakeup_gesture
     chmod 0660 /proc/touchpanel/wakeup_gesture
+
+    # Power HAL
+    mount none /system/lib/hw/power.qcom.so /vendor/lib/hw/power.qcom.so bind
+    mount none /system/lib64/hw/power.qcom.so /vendor/lib64/hw/power.qcom.so bind
