--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -14,6 +14,9 @@ on init
     mount none /system/lib/libDiracAPI_SHARED.so /vendor/lib/libDiracAPI_SHARED.so bind
     mount none /system/etc/diracmobile.config /vendor/etc/diracmobile.config bind
 
+    # Media Profile
+    mount none /system/etc/media_profiles_V1_0.xml /vendor/etc/media_profiles_V1_0.xml bind
+
     # Power HAL
     mount none /system/lib/hw/power.qcom.so /vendor/lib/hw/power.qcom.so bind
     mount none /system/lib64/hw/power.qcom.so /vendor/lib64/hw/power.qcom.so bind
